--- a/Credit_Risk_Assessment.ipynb
+++ b/Credit_Risk_Assessment.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ced7b4b9-9be0-4ee2-88ca-7fa4a7f81dc8",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "518fce30-b689-42a6-8a69-6f1e488212bd",
    "metadata": {
     "scrolled": true
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4caffb49-22fa-41ad-9e14-f1746838dfae",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f163f121-c604-4459-add1-338ca74e8ef7",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "801ee362-ac1e-4f7a-8bb7-aab00ef3e3cb",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "f3e46105-f14c-45fc-9b21-a43d9976a675",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "68e6d65f-d15e-4362-8a1e-65994cae7fe1",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "6e2efbe4-df02-4a78-8aa3-b3fe3dd6cf76",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
        "max      75.000000          4.000000           2.000000     1.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "f912a027-9feb-4adc-bb2f-3da5a4d8e1c4",
    "metadata": {},
    "outputs": [],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "4c996e70-c761-4a3e-bae6-03f19029feff",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "679ee564-8bcb-403c-ac10-80748dec1dd7",
    "metadata": {},
    "outputs": [
@@ -688,6 +688,7 @@
    "source": [
     "Step 8: Exploratory Data Analysis\n",
     "Goal: Understand patterns, relationships, and outliers in the data.\n",
+    "\n",
     "Why:\n",
     "EDA helps us spot relationships between features and the target.\n",
     "For example, we might discover that higher credit amounts correlate with bad credit."
@@ -695,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "1831f635-7f73-4a69-b815-d5f7d7e1e569",
    "metadata": {},
    "outputs": [
@@ -711,7 +712,6 @@
     }
    ],
    "source": [
-    "# Example: correlation heatmap for numerical features\n",
     "sns.heatmap(df[numerical_cols + ['Credit_Risk']].corr(), annot=True, cmap='coolwarm')\n",
     "plt.title('Correlation Matrix')\n",
     "plt.show()"
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "74601f19-bbb9-4946-aa74-83d5fab0f558",
    "metadata": {},
    "outputs": [],
@@ -776,7 +776,6 @@
     "X = df.drop(\"Credit_Risk\", axis=1)\n",
     "y = df[\"Credit_Risk\"]\n",
     "\n",
-    "# 80% training, 20% testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
@@ -790,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "e188a88f-a2f6-4d24-bb90-80c61cd2693b",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1206,7 @@
        "LogisticRegression(max_iter=1000)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "6cd78fd7-e631-459b-8af5-c44983f68e8e",
    "metadata": {},
    "outputs": [
@@ -1252,7 +1251,6 @@
     "y_pred = log_model.predict(X_test)\n",
     "y_prob = log_model.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "# Print standard evaluation metrics\n",
     "print(classification_report(y_test, y_pred))\n",
     "print(\"ROC AUC Score:\", roc_auc_score(y_test, y_prob))"
    ]
@@ -1265,9 +1263,13 @@
     "Metrics explained:\n",
     "\n",
     "Accuracy: overall correctness\n",
+    "\n",
     "Precision: % of predicted positives that were correct\n",
+    "\n",
     "Recall: % of actual positives correctly identified\n",
+    "\n",
     "F1-score: balance of precision and recall\n",
+    "\n",
     "ROC AUC: ability to separate classes (closer to 1 is better)\n",
     "\n",
     "Key observations:\n",
@@ -1293,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "34ab6400-bc5a-4392-9aa6-d876ad582a1f",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "8bcb19ca-a98c-407d-b01a-e83080c97c34",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1381,6 @@
     "y_pred_balanced = log_model_balanced.predict(X_test)\n",
     "y_prob_balanced = log_model_balanced.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "# Print standard evaluation metrics\n",
     "print(classification_report(y_test, y_pred_balanced))\n",
     "print(\"ROC AUC Score:\", roc_auc_score(y_test, y_prob_balanced))"
    ]
@@ -1398,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "e05a0f35-25e3-4139-b260-72715c253bae",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "68cd08f8-8e60-4d57-961a-ecb208b5f72a",
    "metadata": {},
    "outputs": [
@@ -1476,9 +1477,8 @@
     "threshold = 0.4\n",
     "y_pred_adjusted = (y_prob_balanced >= threshold).astype(int)\n",
     "\n",
-    "# Evaluate\n",
     "print(classification_report(y_test, y_pred_adjusted))\n",
-    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_adjusted))\n"
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_adjusted))"
    ]
   },
   {
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "666614ad-5e8a-4c0b-b001-5ed5fbf0b314",
    "metadata": {},
    "outputs": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "id": "cb08596a-824b-4856-b55e-7641f8873cec",
    "metadata": {},
    "outputs": [
@@ -1553,8 +1553,6 @@
     }
    ],
    "source": [
-    "\n",
-    "# Models to compare\n",
     "models = {\n",
     "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
     "    \"Random Forest\": RandomForestClassifier(n_estimators=100, random_state=42),\n",
@@ -1563,7 +1561,6 @@
     "    \"KNN\": KNeighborsClassifier()\n",
     "}\n",
     "\n",
-    "# Evaluate each\n",
     "results = []\n",
     "for name, model in models.items():\n",
     "    model.fit(X_train, y_train)\n",
@@ -1580,7 +1577,6 @@
     "        \"Confusion Matrix:\\n\": confusion_matrix(y_test, y_pred)\n",
     "    })\n",
     "\n",
-    "# Display results\n",
     "results_df = pd.DataFrame(results).sort_values(by=\"ROC AUC\", ascending=False).reset_index(drop=True)\n",
     "print(results_df)"
    ]
@@ -1610,8 +1606,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7bb61eb-9249-4742-b82f-91176884c713",
+   "metadata": {},
+   "source": [
+    "Step 7: Apply SMOTE (Synthetic Minority Over-sampling Technique) to address class imbalance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "id": "7741810e-448a-4e79-8f03-e5c009a69944",
    "metadata": {},
    "outputs": [
@@ -1641,7 +1645,6 @@
     "sm = SMOTE(random_state=42)\n",
     "X_resampled, y_resampled = sm.fit_resample(X_train, y_train)\n",
     "\n",
-    "# Retrain logistic regression on resampled data\n",
     "model_smote = LogisticRegression(max_iter=1000)\n",
     "model_smote.fit(X_resampled, y_resampled)\n",
     "\n",
@@ -1651,6 +1654,18 @@
     "print(classification_report(y_test, y_pred_smote))\n",
     "print(\"ROC AUC Score:\", roc_auc_score(y_test, y_prob_smote))\n",
     "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_smote))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fd93b92-f704-453c-acfc-0b4a33871b6e",
+   "metadata": {},
+   "source": [
+    "   - SMOTE creates synthetic examples of the minority class\n",
+    "   - The result is a new, balanced dataset with equal representation of all classes\n",
+    "   - Returns resampled features (X_resampled) and labels (y_resampled)\n",
+    "\n",
+    "SMOTE works by generating synthetic examples for minority classes by interpolating between existing minority class samples, helping to balance the dataset and potentially improve model performance on imbalanced classification problems."
    ]
   },
   {
@@ -1667,14 +1682,15 @@
    "metadata": {},
    "source": [
     "Stage 3: Dataset cleaning\n",
+    "\n",
     "Let's clean our dataset from useless features and see how it improves the model\n",
     "\n",
-    "Step 9.1: Separate the target variable"
+    "Step 3.1: Separate the target variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "id": "1fc31b89-5d35-4caa-a43a-0f43fd315aa7",
    "metadata": {},
    "outputs": [],
@@ -1689,13 +1705,13 @@
    "id": "4f4ed489-c087-4de8-952d-f5e2886ef202",
    "metadata": {},
    "source": [
-    "Step 9.2: Identify low-correlation features\n",
+    "Step 3.2: Identify low-correlation features\n",
     "These features have almost no linear relationship with the target."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "669a75ac-076c-4c6e-a35a-57d7d345b4cd",
    "metadata": {},
    "outputs": [],
@@ -1709,13 +1725,13 @@
    "id": "07879d38-a0c9-41c9-88ce-539d77513eb7",
    "metadata": {},
    "source": [
-    "Step 9.3: Identify low-variance features\n",
+    "Step 3.3: Identify low-variance features\n",
     "These features are almost constant, so they don't help the model differentiate classes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "4525d22a-ed70-4413-9e79-76e0b413a3f0",
    "metadata": {},
    "outputs": [],
@@ -1728,13 +1744,13 @@
    "id": "88c5513f-f626-4002-b3bf-e351f9f9f0ff",
    "metadata": {},
    "source": [
-    "Step 9.4: Identify highly skewed binary features\n",
+    "Step 3.4: Identify highly skewed binary features\n",
     "Mostly 0 or mostly 1 (e.g., 98% same value). These are usually one-hot encoded columns that don't carry useful variation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "id": "6a0add13-e57e-43b9-a6cb-866212fd4cc5",
    "metadata": {},
    "outputs": [],
@@ -1750,12 +1766,12 @@
    "id": "9d8e4ab7-b80a-4152-89b4-f6c7404e52f7",
    "metadata": {},
    "source": [
-    "Step 9.5: Drop the features"
+    "Step 3.5: Drop the features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "id": "177ea1f9-0d5c-45fe-9f16-9115beb50a1c",
    "metadata": {},
    "outputs": [],
@@ -1772,12 +1788,12 @@
    "id": "02c6fc95-8381-4784-9d0e-fef96193ec91",
    "metadata": {},
    "source": [
-    "Step 9.6: Calculate model"
+    "Step 3.6: Calculate model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "id": "ab255ecd-f250-410e-9b13-6f02f533571a",
    "metadata": {},
    "outputs": [
@@ -1797,21 +1813,23 @@
       "\n",
       "ROC AUC Score: 0.8201706935929799\n",
       "OLD RESULTS:\n",
-      "              precision    recall  f1-score   support\n",
+      "                 Model  Accuracy  Precision    Recall  F1 Score   ROC AUC  \\\n",
+      "0              XGBoost     0.785   0.710526  0.457627  0.556701  0.836158   \n",
+      "1  Logistic Regression     0.800   0.702128  0.559322  0.622642  0.818007   \n",
+      "2                  SVM     0.770   0.724138  0.355932  0.477273  0.796009   \n",
+      "3        Random Forest     0.750   0.636364  0.355932  0.456522  0.790179   \n",
+      "4                  KNN     0.740   0.594595  0.372881  0.458333  0.729775   \n",
       "\n",
-      "           0       0.77      0.89      0.83       141\n",
-      "           1       0.59      0.37      0.46        59\n",
-      "\n",
-      "    accuracy                           0.74       200\n",
-      "   macro avg       0.68      0.63      0.64       200\n",
-      "weighted avg       0.72      0.74      0.72       200\n",
-      "\n",
-      "ROC AUC Score: 0.7297752133669912\n"
+      "     Confusion Matrix:\\n  \n",
+      "0  [[130, 11], [32, 27]]  \n",
+      "1  [[127, 14], [26, 33]]  \n",
+      "2   [[133, 8], [38, 21]]  \n",
+      "3  [[129, 12], [38, 21]]  \n",
+      "4  [[126, 15], [37, 22]]  \n"
      ]
     }
    ],
    "source": [
-    "# 80% training, 20% testing\n",
     "X_train_cleaned, X_test_cleaned, y_train_cleaned, y_test_cleaned = train_test_split(X_cleaned, y_cleaned, test_size=0.2, random_state=42)\n",
     "\n",
     "log_model_cleaned = LogisticRegression(max_iter=1000)\n",
@@ -1820,19 +1838,17 @@
     "y_pred_cleaned = log_model_cleaned.predict(X_test_cleaned)\n",
     "y_prob_cleaned = log_model_cleaned.predict_proba(X_test_cleaned)[:, 1]\n",
     "\n",
-    "# Print standard evaluation metrics\n",
     "print(\"NEW RESULTS:\")\n",
     "print(classification_report(y_test_cleaned, y_pred_cleaned))\n",
     "print(\"ROC AUC Score:\", roc_auc_score(y_test_cleaned, y_prob_cleaned))\n",
     "\n",
     "print(\"OLD RESULTS:\")\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "print(\"ROC AUC Score:\", roc_auc_score(y_test, y_prob))"
+    "print(results_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "id": "56d6dc2b-eb14-4739-bd85-4698a3ffe1c0",
    "metadata": {},
    "outputs": [
@@ -1869,8 +1885,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc0cb73e-9146-4f9f-af2c-e97abb70ade0",
+   "metadata": {},
+   "source": [
+    "Stage 4: Evaluate features importance "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "id": "ca057321-9ca4-45a2-8e40-45267c284b3b",
    "metadata": {},
    "outputs": [
@@ -1891,17 +1915,13 @@
     "X = df.drop(columns=[target])\n",
     "y = df[target]\n",
     "\n",
-    "# Split the dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train XGBoost model\n",
     "xgb_model = XGBClassifier(eval_metric=\"logloss\", random_state=42)\n",
     "xgb_model.fit(X_train, y_train)\n",
     "\n",
-    "# Compute permutation importance\n",
     "perm_importance = permutation_importance(xgb_model, X_test, y_test, n_repeats=10, random_state=42)\n",
     "\n",
-    "# Sort indices and prepare plot\n",
     "sorted_idx = perm_importance.importances_mean.argsort()\n",
     "plt.figure(figsize=(10, 8), dpi=150)\n",
     "plt.barh(X.columns[sorted_idx], perm_importance.importances_mean[sorted_idx])\n",
